[Fix] Chat private on mobile: fix UI guide

--- a/frontend/web/less/mobile/chat_post.less
+++ b/frontend/web/less/mobile/chat_post.less
@@ -82,6 +82,7 @@
         float: left;
         z-index: 5;
         overflow-y: auto;
+        background-color: #f4f4f4;
         .message{
             padding: 15px;
         }
@@ -96,7 +97,7 @@
                 display: table;
                 .avatar{
                     background: #e6e6e6;
-                    border-radius: 50%;
+                    border-radius: 20px;
                     width: 40px;
                     height: 40px;
                     display: table-cell;
@@ -145,7 +146,7 @@
                 }
                 p{
                     color: #1d1b1b;
-                    font-size: 14px;
+                    font-size: 13px;
                     word-wrap: break-word;
                 }
                 p.time{
@@ -229,7 +230,7 @@
                 }
                 p{
                     color: #1d1b1b;
-                    font-size: 14px;
+                    font-size: 13px;
                     word-wrap: break-word;
                 }
                 p.time{
